refactor(processor): address Simplify efficiency F1 — zero-copy rulesFor view
MessageRuleRegistry.rulesFor returns Collections.unmodifiableList view instead of
List.copyOf, eliminating a per-message array clone (registry is write-once at
startup, read-only at runtime). Behavior preserved; unmodifiable contract intact.

AI-Generated: claude-code
Reviewed-By: pending